--- a/ui/sections/wizard/inspectors/user.reel/table-users.reel/table-row.reel/table-row.html
+++ b/ui/sections/wizard/inspectors/user.reel/table-users.reel/table-row.reel/table-row.html
@@ -38,7 +38,7 @@
                 "placeholder": "set user password"
             },
             "bindings": {
-                "value": {"<->": "@owner.object.password"}
+                "password": {"<->": "@owner.object.password"}
             }
         }
 
