--- a/ui/main.reel/main.html
+++ b/ui/main.reel/main.html
@@ -126,7 +126,8 @@
         "signInModal": {
             "prototype": "blue-shark/ui/modal.reel",
             "properties": {
-                "element": {"#": "signInModal"}
+                "element": {"#": "signInModal"},
+                "hideCloseButton": true
             },
             "bindings": {
                 "classList.has('montage-Overlay--visible')": {"<-": "!@signIn.isLoggedIn"}
@@ -135,8 +136,7 @@
         "signIn": {
             "prototype": "ui/sign-in.reel",
             "properties": {
-                "element": {"#": "signIn"},
-                "hideCloseButton": true
+                "element": {"#": "signIn"}
             }
         }
     }
