Fix alert filters edition

--- a/ui/sections/system/inspectors/alert.reel/alert-filter.reel/alert-filter.html
+++ b/ui/sections/system/inspectors/alert.reel/alert-filter.reel/alert-filter.html
@@ -10,13 +10,11 @@
                 "element": {"#": "owner"}
             }
         },
+
         "validationController": {
-            "prototype": "core/controller/validation-controller",
-            "properties": {
-                "fields": {
-                }
-            }
+            "prototype": "core/controller/validation-controller"
         },
+
         "inspector": {
             "prototype": "ui/inspectors/inspector.reel",
             "properties": {
@@ -33,13 +31,65 @@
                 "isLoading": {"<-": "@owner.isLoading"}
             }
         },
+
         "table": {
-            "prototype": "ui/sections/system/inspectors/alert.reel/table-predicates.reel",
+            "prototype": "blue-shark/ui/tables/table-editable.reel",
             "properties": {
-                "element": {"#": "table"}
+                "element": {"#": "table"},
+                "delegate": {"@": "owner"},
+                "label": "Alert Notifications",
+                "contentMaxHeight": 25,
+                "columns":  [
+                    {
+                        "value": "Event"
+                    },
+                    {
+                        "value": "Action"
+                    },
+                    {
+                        "value": "Recipients"
+                    }
+                ]
             },
             "bindings": {
-                "rows": {"<->": "@owner.alertFilters"}
+                "rows": {"<-": "@owner.object.filters"}
+            }
+        },
+
+        "defaultHeader": {
+            "prototype": "./table-header.reel",
+            "properties": {
+                "element": {"#": "tableHeader"},
+                "table": {"@": "table"}
+            }
+        },
+
+        "newEntry": {
+            "prototype": "./table-row-predicate.reel",
+            "properties": {
+                "element": {"#": "newEntry"}
+            },
+            "bindings": {
+                "object": {"<-": "@table.currentNewEntry.object"}
+            }
+        },
+
+        "entry": {
+            "prototype": "./table-row-predicate.reel",
+            "properties": {
+                "element": {"#": "entry"}
+            },
+            "bindings": {
+                "object": {"<-": "@table:rowIteration.object.object"}
+            }
+        },
+
+        "settings": {
+            "prototype": "ui/controls/inspector-option.reel",
+            "properties": {
+                "element": {"#": "settings"},
+                "name": "Settings",
+                "path": "settings"
             }
         }
     }
@@ -48,7 +98,12 @@
 <body>
     <div data-montage-id="owner" class="AlertFilter">
         <div data-montage-id="inspector">
-            <div data-montage-id="table" class="AlertFilter-table"></div>
+            <div data-montage-id="table" class="AlertFilter-table">
+                <div data-arg="table-editable-header-toolbar" data-montage-id="tableHeader"></div>
+                <div data-arg="row-new" data-montage-id="newEntry" class="Table-row"></div>
+                <div data-arg="row-entry" data-montage-id="entry" class="Table-row"></div>
+            </div>
+            <div data-montage-id="settings"></div>
         </div>
     </div>
 </body>
