--- a/ui/sections/system/inspectors/alert.reel/table-predicates.reel/table-predicates.html
+++ b/ui/sections/system/inspectors/alert.reel/table-predicates.reel/table-predicates.html
@@ -30,7 +30,7 @@
                 ]
             },
             "bindings": {
-                "rows": {"<->": "@owner.rows"}
+                "rows": {"<-": "@owner.rows"}
             }
         },
 
