Chosen label makes no sense. Fix it.

--- a/ui/sections/storage/inspectors/volume-dataset.reel/volume-dataset.html
+++ b/ui/sections/storage/inspectors/volume-dataset.reel/volume-dataset.html
@@ -172,7 +172,7 @@
              "prototype": "blue-shark/ui/field-checkbox.reel",
              "properties": {
                  "element": {"#": "checkbox"},
-                 "label": "Edit hidden property"
+                 "label": "Hidden"
              },
              "bindings": {
                  "checked": {"<->": "@owner.object.hidden"}
