--- a/ui/sections/storage/inspectors/replication.reel/replication.html
+++ b/ui/sections/storage/inspectors/replication.reel/replication.html
@@ -63,6 +63,15 @@
                 "classList.has('hide')": {"<-": "!!@owner.context.dataset"}
             }
         },
+        "nameSubstitution": {
+            "prototype": "montage/ui/substitution.reel",
+            "properties": {
+                "element": {"#": "nameSubstitution"}
+            },
+            "bindings": {
+                "switchValue": {"<-": "@owner.isCreateMode ? 'CREATE' : 'DISPLAY'"}
+            }
+        },
         "name": {
             "prototype": "blue-shark/ui/field-text-input.reel",
             "properties": {
@@ -71,8 +80,17 @@
                 "label": "Name"
             },
             "bindings": {
-                "value": {"<->": "@owner.object.name"},
-                "classList.has('hide')": {"<-": "!@owner.isCreateMode"}
+                "value": {"<->": "@owner.object.name"}
+            }
+        },
+        "nameDisplay": {
+            "prototype": "blue-shark/ui/field-text.reel",
+            "properties": {
+                "element": {"#": "nameDisplay"},
+                "label": "Name"
+            },
+            "bindings": {
+                "value": {"<-": "@owner.object.name"}
             }
         },
         "peerOptionsConverter": {
@@ -242,7 +260,14 @@
 <body>
     <div data-montage-id="owner" class="Replication">
     <div data-montage-id="inspector">
-        <div data-montage-id="name"></div>
+        <div data-montage-id="nameSubstitution">
+            <div data-arg="CREATE">
+                <div data-montage-id="name"></div>
+            </div>
+            <div data-arg="DISPLAY">
+                <div data-montage-id="nameDisplay"></div>
+            </div>
+        </div>
         <div data-montage-id="peer"></div>
         <div data-montage-id="source_dataset"></div>
         <div data-montage-id="target_dataset"></div>
