UPDATED: hide vm tool version and template version when no property

--- a/ui/sections/vms/inspectors/virtual-machine.reel/virtual-machine.html
+++ b/ui/sections/vms/inspectors/virtual-machine.reel/virtual-machine.html
@@ -319,17 +319,19 @@
                 "element": {"#": "guestInfoVersion"}
             },
             "bindings": {
-                "value": {"<-": "!@owner.object.guestInfo.version ? 'Not detected' : @owner.object.guestInfo.version"}
+                "value": {"<-": "!@owner.object.guestInfo.version ? 'Not detected' : @owner.object.guestInfo.version"},
+                "classList.has('hide')": {"<-": "!@owner.object.guestInfo.version"}
             }        
         },
         "guestVmTemplate": {
             "prototype": "blue-shark/ui/field-text.reel",
             "properties": {
-                "label": "VM Template",
+                "label": "VM Template Version",
                 "element": {"#": "guestVmTemplate"}
             },
             "bindings": {
-                "value": {"<-": "!@owner.object.template.vm_tools_version ? 'Not detected' : @owner.object.template.vm_tools_version"}
+                "value": {"<-": "!@owner.object.template.template_version ? 'Not detected' : @owner.object.template.template_version"},
+                "classList.has('hide')": {"<-": "!@owner.object.template.template_version"}
             }        
         },
         "guestInfoLoadAvg": {
@@ -515,9 +517,9 @@
             <div data-montage-id="guestToolsSubstitution">
                 <div data-montage-id="guestToolsStatus" data-arg="unavailable"></div>
                 <div data-montage-id="guestTools" data-arg="available">
-                    <div data-montage-id="guestInfoRefresh" class="g-margin-bottom"></div>
                     <div data-montage-id="guestInfoVersion" class="g-margin-bottom"></div>
                     <div data-montage-id="guestVmTemplate" class="g-margin-bottom"></div>
+                    <div data-montage-id="guestInfoRefresh" class="g-margin-bottom"></div>
                     <div data-montage-id="guestInfoLoadAvg" class="g-margin-bottom"></div>
                     <div data-montage-id="guestInfoInterfaces" class="g-margin-bottom"></div>
                 </div>
