fixes issue with sideboard not scrolling on FF and toggle button transform bug

--- a/ui/dashboard/sideboard.reel/sideboard.html
+++ b/ui/dashboard/sideboard.reel/sideboard.html
@@ -64,7 +64,9 @@
 
             <div data-montage-id="widget-dropzone" class="Sideboard-widgets"></div>
             <div data-montage-id="toggleSideboard" class="Sideboard-toggleSideboard Button--naked Button--icon">
-                <svg><use xlink:href="#i-arrow"/></svg>
+                <div>
+                    <svg><use xlink:href="#i-arrow"/></svg>
+                </div>
             </div>
         </div>
     </div>
