UPDATED: fix NFS datastore display name correctly

--- a/ui/sections/vms/inspectors/virtual-machine.reel/virtual-machine.html
+++ b/ui/sections/vms/inspectors/virtual-machine.reel/virtual-machine.html
@@ -196,7 +196,7 @@
                 "label": "Datastore"
             },
             "bindings": {
-                "value": {"<-": "@owner.object.target"}
+                "value": {"<-": "@owner.object._datastore.name"}
             }
         },
         "target": {
