renames ip-alias on network interface

--- a/ui/controls/ip-aliases.reel/ip-aliases.html
+++ b/ui/controls/ip-aliases.reel/ip-aliases.html
@@ -17,8 +17,8 @@
             "properties": {
                 "element": {"#": "table"},
                 "delegate": {"@": "owner"},
-                "emptyMessage": "There are no aliases setup",
-                "emptyActionLabel": "Add alias",
+                "emptyMessage": "There are no addresses setup",
+                "emptyActionLabel": "Add address",
                 "columns":  [
                     {
                         "value": "Type"
