Make docker containers deletables

--- a/ui/sections/containers/inspectors/container.reel/container.html
+++ b/ui/sections/containers/inspectors/container.reel/container.html
@@ -34,6 +34,7 @@
                 "canRevert": true
             },
             "bindings": {
+                "context": {"<-": "@owner.context"},
                 "canDelete": {"<-": "!@owner.object._isNew"},
                 "isSaveDisabled": {"<-": "@owner.object.names.length == 0 || !@owner.object.names.0 || @owner.object.names.0.length == 0"}
             }
