adds error names and validators

--- a/ui/controls/ip-aliases.reel/ip-address.reel/ip-address.html
+++ b/ui/controls/ip-aliases.reel/ip-address.reel/ip-address.html
@@ -11,12 +11,22 @@
                 "errors": {},
                 "converters": {
                     "INET": {
-                        "address": {"@": "ipv4_address_converter"},
+                        "address": {"@": "validationOnlyConverter"},
                         "netmask": {"@": "ipv4_netmask_converter"}
                     },
                     "INET6": {
-                        "address": {"@": "ipv6_address_converter"},
+                        "address": {"@": "validationOnlyConverter"},
                         "netmask": {"@": "ipv6_netmask_converter"}
+                    }
+                },
+                "validators": {
+                    "INET": {
+                        "address": {"@": "ipv4_validator"},
+                        "netmask": {"@": "ipv4_netmask_validator"}
+                    },
+                    "INET6": {
+                        "address": {"@": "ipv6_validator"},
+                        "netmask": {"@": "ipv6_netmask_validator"}
                     }
                 },
                 "placeholders": {
@@ -31,8 +41,29 @@
                 }
             }
         },
+        "validationOnlyConverter": {
+            "prototype": "core/converter/validation-only-converter"
+        },
+        "ipv4_validator": {
+            "prototype": "core/converter/validator/ipv4-validator"
+        },
         "ipv4_netmask_converter": {
-            "prototype": "core/converter/ipv4-netmask-converter"
+            "prototype": "core/converter/ipv4-netmask-converter",
+            "properties": {
+                "validator": {"@": "ipv4_netmask_validator"}
+            }
+        },
+        "ipv4_netmask_validator": {
+            "prototype": "core/converter/validator/ipv4-netmask-validator"
+        },
+        "ipv6_validator": {
+            "prototype": "core/converter/validator/ipv6-validator"
+        },
+        "ipv6_netmask_converter": {
+            "prototype": "core/converter/string-to-integer-or-null-converter",
+            "properties": {
+                "validator": {"@": "ipv6_netmask_validator"}
+            }
         },
         "ipv6_netmask_validator": {
             "prototype": "core/converter/validator/integer-range-validator",
@@ -42,28 +73,10 @@
                 "errorMessage": "IPv6 prefix length must be an integer between 0 and 128"
             }
         },
-        "ipv6_netmask_converter": {
-            "prototype": "core/converter/string-to-integer-or-null-converter",
+        "errorController": {
+            "prototype": "blue-shark/core/error-controller",
             "properties": {
-                "validator": {"@": "ipv6_netmask_validator"}
-            }
-        },
-        "ipv4_validator": {
-            "prototype": "core/converter/validator/ipv4-validator"
-        },
-        "ipv6_validator": {
-            "prototype": "core/converter/validator/ipv6-validator"
-        },
-        "ipv4_address_converter": {
-            "prototype": "core/converter/validation-only-converter",
-            "properties": {
-                "validator": {"@": "ipv4_validator"}
-            }
-        },
-        "ipv6_address_converter": {
-            "prototype": "core/converter/validation-only-converter",
-            "properties": {
-                "validator": {"@": "ipv6_validator"}
+                "form": {"@": "owner"}
             }
         },
         "type": {
@@ -83,25 +96,29 @@
         "address": {
             "prototype": "blue-shark/ui/text-field.reel",
             "properties": {
-                "element": {"#": "address"}
+                "element": {"#": "address"},
+                "errorName": "Address"
             },
             "bindings": {
                 "value": {"<->": "@owner.object.address"},
                 "placeholder": {"<-": "@owner.placeholders.address[@owner.object.type]"},
                 "disabled": {"<-": "!@owner.object.type || @owner.isReadOnly"},
                 "converter": {"<-": "@owner.converters[@owner.object.type].address"},
+                "validator": {"<-": "@owner.validators[@owner.object.type].address"},
                 "error": {"<->": "@owner.errors.address"}
             }
         },
         "netmask": {
             "prototype": "blue-shark/ui/text-field.reel",
             "properties": {
-                "element": {"#": "netmask"}
+                "element": {"#": "netmask"},
+                "errorName": "Netmask"
             },
             "bindings": {
                 "value": {"<->": "@owner.object.netmask"},
                 "placeholder": {"<-": "@owner.placeholders.netmask[@owner.object.type]"},
-                "converter": {"<-": "@owner.converters[@owner.object.type]"},
+                "converter": {"<-": "@owner.converters[@owner.object.type].netmask"},
+                "validator": {"<-": "@owner.validators[@owner.object.type].netmask"},
                 "disabled": {"<-": "!@owner.object.type || @owner.isReadOnly"},
                 "error": {"<->": "@owner.errors.netmask"}
             }
